TAG: qcreports_db-4-3-0-3
TAG: qcreports_db-4-3-0-2
TAG: qcreports_db-4-3-0-1
DATE: 07/15/2009
DATE: 07/14/2009
STAFF: lec
CHANGES:
1) merge of TR7493 branch gene trap less filling
2) weekly/ALL_Progress.py
3) added "15. Allele Strain of Origin vs. Parent Cell Line Strain" to Alleles
   this report is generated from allcacheload/allstrain.py

TAG: qcreports_db-4-2-2-3
DATE: 06/09/2009
STAFF: mhall
CHANGES:
1) TR8820/GXD_AssayInIndexNotInCache.py minor formatting changes.

TAG: qcreports_db-4-2-2-2
DATE: 05/28/2009
STAFF: lec
CHANGES:
1) TR9665/GXD_GelBandError.sql

TAG: qcreports_db-tr7493-2
DATE: 07/14/2009
STAFF: lec
CHANGES:
1) TR7493/gene trap less filling

TAG: qcreports_db-tr7493-1
DATE: 05/27/2009
STAFF: lec
CHANGES:
1) TR7493/gene trap less filling

TAG: qcreports_db-tr7493-BP
DATE: 05/27/2009
STAFF: lec
CHANGES:
1) branch tag for TR7493/gene trap less filling

TAG: qcreports_db-4-2-2-1
DATE: 05/26/2009
STAFF: dbm
CHANGES:
1) TR9509; Removed MRK_AllNoGeneModel.py, MRK_ENSEMBLnoGeneModel.py,
           MRK_NCBInoGeneModel.py and MRK_VEGAnoGeneModel.py

TAG: qcreports_db-4-2-1-21
DATE: 05/26/2009
STAFF: lec
CHANGES:
1) TR9641; mgd/GXD_LackingImages.py
2) TR9641; mgd/RECOMB_LackingImages.py
3) TR9646; mgd/GXD_FullCodeGene.sql

TAG: qcreports_db-4-2-1-20
DATE: 05/26/2009
STAFF: lec
CHANGES:
1) removed mgd/ACC_GenBank.sql
2) removed mgd/MGI_RepSequences.py (TR8121)
3) removed mgd/SEQ_SeqRefMrkNoSeqMrk.sql

TAG: qcreports_db-4-2-1-19
TAG: qcreports_db-4-2-1-18
DATE: 05/19/2009
STAFF: lec
CHANGES:
1) TR5226; remove weekly/SEQ_GenBank.py per Bob/Lori

TAG: qcreports_db-4-2-1-17
DATE: 05/12/2009
STAFF: mhall
CHANGES:
1) TR8820
   GXD_AssayInCacheNotInIndex.py
   GXD_AssayInIndexNotInCache.py

TAG: qcreports_db-4-2-1-16
DATE: 05/12/2009
STAFF: lec
CHANGES:
1) TR9643; added Cell Commun Signal, J Biomed Sci, Neural Develop
   GXD_Images.py
   RECOMB_Images.py

TAG: qcreports_db-4-2-1-15
DATE: 05/06/2009
STAFF: mhall
CHANGES:
1) TR9613/RECOMB_Images.sql; add to qcr.html