@@ -79,6 +79,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_CellLineProvider.sql.rpt">Mutant ES Cell Line Provider Check</A>
 <LI><A HREF="/data/reports/qcreports_db/output/PHENO_ImageCheck.sql.rpt">Image Check</A>
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_SequenceReference.sql.rpt">Reference associations created by the gene trap load</A
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_GermlineTransmission.sql.rpt">Germline Transmission Checks</A
 <LI><A HREF="/data/reports/qcreports_db/output/allstrain.rpt">Allele Strain of Origin vs. Parent Cell Line Strain</A
 <LI><A HREF="http://aretha.jax.org/jax/tbase">TBASE</A>
 </OL>
