@@ -1,3 +1,9 @@
+TAG: qcreports_db-4-3-0-4
+DATE: 07/29/2009
+STAFF: lec
+CHANGES:
+1) ALL_GermlineTransmission.sql
+
 TAG: qcreports_db-4-3-0-3
 TAG: qcreports_db-4-3-0-2
 TAG: qcreports_db-4-3-0-1
